--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "homepage": "https://github.com/MartinianoGomes/gymplanner_api#readme",
   "dependencies": {
     "fastify": "^5.6.1"
+  },
+  "devDependencies": {
+    "@types/node": "^24.7.1",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
