--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/MartinianoGomes/gymplanner_api#readme",
   "dependencies": {
-    "fastify": "^5.6.1"
+    "fastify": "^5.6.1",
+    "pino-pretty": "^13.1.2"
   },
   "devDependencies": {
     "@types/node": "^24.7.1",
