--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/MartinianoGomes/gymplanner_api#readme",
   "dependencies": {
+    "express-async-errors": "^3.1.1",
     "fastify": "^5.6.1",
-    "pino-pretty": "^13.1.2"
+    "pino-pretty": "^13.1.2",
+    "prisma": "^5.19.1"
   },
   "devDependencies": {
     "@types/node": "^24.7.1",
