--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/MartinianoGomes/gymplanner_api#readme",
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "bcryptjs": "^3.0.2",
     "express-async-errors": "^3.1.1",
     "fastify": "^5.6.1",
     "pino-pretty": "^13.1.2",
-    "prisma": "^5.19.1"
+    "prisma": "^5.19.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.7.1",
