--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
   "dependencies": {
     "@prisma/client": "^6.17.1",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "express-async-errors": "^3.1.1",
     "fastify": "^5.6.1",
     "pino-pretty": "^13.1.2",
-    "prisma": "^5.19.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/node": "^24.7.1",
+    "prisma": "^6.17.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
