--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/MartinianoGomes/gymplanner_api#readme",
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
+    "@fastify/helmet": "^13.0.2",
     "@prisma/client": "^6.17.1",
     "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
     "express-async-errors": "^3.1.1",
     "fastify": "^5.6.1",
     "pino-pretty": "^13.1.2",
