--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@fastify/helmet": "^13.0.2",
+    "@fastify/jwt": "^10.0.0",
     "@prisma/client": "^6.17.1",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.3",
     "express-async-errors": "^3.1.1",
     "fastify": "^5.6.1",
     "pino-pretty": "^13.1.2",
@@ -31,7 +33,9 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.7.1",
+    "@types/uuid": "^10.0.0",
     "prisma": "^6.17.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
