--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@fastify/cors": "^11.1.0",
     "@fastify/helmet": "^13.0.2",
     "@fastify/jwt": "^10.0.0",
+    "@fastify/swagger": "^9.5.2",
+    "@fastify/swagger-ui": "^5.2.3",
     "@prisma/client": "^6.17.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
@@ -31,6 +33,7 @@
     "fastify": "^5.6.1",
     "pino-pretty": "^13.1.2",
     "uuid": "^13.0.0",
+    "yaml": "^2.8.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
