--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "prisma db push && tsx watch src/server.ts",
-    "prisma-gen": "npx prisma generate"
+    "generate": "npx prisma generate",
+    "push": "prisma db push",
+    "dev": "tsx watch src/server.ts"
   },
   "repository": {
     "type": "git",
