--- a/.env_example
+++ b/.env_example
@@ -1,11 +1,12 @@
-# URL do banco de dados - fixo.
-DATABASE_URL="mongodb+srv://admin:admin@gymplannerdb.vqr7fhe.mongodb.net/GymPlannerDB?retryWrites=true&w=majority"
+# URL do banco de dados MongoDB (Atlas ou local)
+DATABASE_URL="mongodb+srv://usuario:senha@cluster.mongodb.net/DatabaseName?retryWrites=true&w=majority"
 
-# Chave secreta para JWT
-JWT_SECRET="gymplanner"
+# Chave secreta para JWT - Use uma string aleatória forte!
+# Gere com: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET="seu-jwt-secret-super-secreto-aqui"
 
-# Define o ambiente. Use "development" (desenvolvimento) ou "production" (produção)
-NODE_ENV="development"
+# Ambiente de execução
+NODE_ENV="production"
 
-# Porta em que o servidor irá rodar
+# Porta do servidor
 PORT=3000
