Revert "Update .env_example"
This reverts commit 594acb405fb9753d0d54ea1df5579fd7eab7ac70.

--- a/.env_example
+++ b/.env_example
@@ -1,12 +1,11 @@
-# URL do banco de dados MongoDB (Atlas ou local)
-DATABASE_URL="mongodb+srv://usuario:senha@cluster.mongodb.net/DatabaseName?retryWrites=true&w=majority"
+# URL do banco de dados - fixo.
+DATABASE_URL="mongodb+srv://admin:admin@gymplannerdb.vqr7fhe.mongodb.net/GymPlannerDB?retryWrites=true&w=majority"
 
-# Chave secreta para JWT - Use uma string aleatória forte!
-# Gere com: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
-JWT_SECRET="seu-jwt-secret-super-secreto-aqui"
+# Chave secreta para JWT
+JWT_SECRET="gymplanner"
 
-# Ambiente de execução
-NODE_ENV="production"
+# Define o ambiente. Use "development" (desenvolvimento) ou "production" (produção)
+NODE_ENV="development"
 
-# Porta do servidor
+# Porta em que o servidor irá rodar
 PORT=3000
