--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "npx prisma generate",
     "push": "prisma db push",
-    "dev": "tsx watch src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js"
+    "dev": "tsx watch src/server.ts"
   },
   "repository": {
     "type": "git",
